--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -11,3 +11,13 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
+.helper-text {
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+}
+.helper-text-password {
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+}
